feat: fixes #1443 and removed toggle

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -1055,5 +1055,6 @@
   "no_reliable_node_reachable": "Не можа да се достигне до надежден възел. Моля, проверете дали имате връзка с интернет.",
   "node_successfully_connected": "Успешно свързан с възела",
   "selected_node": "В момента избран възел",
-  "toggle_nodeselection_mode": "Превключете, за да превключвате между ръчен или автоматичен избор на възел"
+  "toggle_nodeselection_mode": "Превключете, за да превключвате между ръчен или автоматичен избор на възел",
+  "commitment_zero_balance": "Все още не сте добавили ангажимент"
 }
