--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -1055,5 +1055,6 @@
   "no_reliable_node_reachable": "Δεν ήταν δυνατή η εύρεση αξιόπιστου κόμβου. Παρακαλώ, επαληθεύστε εάν έχετε σύνδεση στο Διαδίκτυο.",
   "node_successfully_connected": "Συνδέθηκε με επιτυχία στον κόμβο",
   "selected_node": "Επιλεγμένος κόμβος",
-  "toggle_nodeselection_mode": "Εναλλαγή για εναλλαγή μεταξύ χειροκίνητης ή αυτόματης επιλογής κόμβων"
+  "toggle_nodeselection_mode": "Εναλλαγή για εναλλαγή μεταξύ χειροκίνητης ή αυτόματης επιλογής κόμβων",
+  "commitment_zero_balance": "Δεν έχετε προσθέσει ακόμη δέσμευση"
 }
