--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -1055,5 +1055,6 @@
   "no_reliable_node_reachable": "Не удалось связаться ни с одним надежным узлом. Пожалуйста, проверьте, есть ли у вас подключение к Интернету.",
   "node_successfully_connected": "Успешно подключился к узлу",
   "selected_node": "Текущий выбранный узел",
-  "toggle_nodeselection_mode": "Переключитесь, чтобы переключаться между ручным или автоматическим выбором узла"
+  "toggle_nodeselection_mode": "Переключитесь, чтобы переключаться между ручным или автоматическим выбором узла",
+  "commitment_zero_balance": "У вас еще нет добавленных обязательств"
 }
