--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -1070,5 +1070,6 @@
   "no_reliable_node_reachable": "Није могуће доћи до ниједног поузданог чвора. Молимо вас да проверите да ли имате интернет везу.",
   "node_successfully_connected": "Успешно повезан са чвором",
   "selected_node": "Тренутно изабрани чвор",
-  "toggle_nodeselection_mode": "Пребаците за пребацивање између ручног или аутоматског избора чвора"
+  "toggle_nodeselection_mode": "Пребаците за пребацивање између ручног или аутоматског избора чвора",
+  "commitment_zero_balance": "Још увек нисте додали обавезу"
 }
