--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -1055,5 +1055,6 @@
   "no_reliable_node_reachable": "Не вдалося досягти жодного надійного вузла. Будь ласка, перевірте, чи є у вас підключення до Інтернету.",
   "node_successfully_connected": "Успішно підключено до вузла",
   "selected_node": "Наразі вибраний вузол",
-  "toggle_nodeselection_mode": "Перемикайте, щоб перемикатися між ручним або автоматичним вибором вузлів"
+  "toggle_nodeselection_mode": "Перемикайте, щоб перемикатися між ручним або автоматичним вибором вузлів",
+  "commitment_zero_balance": "Ви ще не додали жодного зобов’язання"
 }
