--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -1055,5 +1055,6 @@
   "no_reliable_node_reachable": "No s'ha pogut arribar a cap node fiable. Si us plau, verifiqueu si teniu connexió a Internet.",
   "node_successfully_connected": "S'ha connectat correctament al node",
   "selected_node": "Node seleccionat actualment",
-  "toggle_nodeselection_mode": "Alterna per canviar entre la selecció manual o automàtica de nodes"
+  "toggle_nodeselection_mode": "Alterna per canviar entre la selecció manual o automàtica de nodes",
+  "commitment_zero_balance": "Encara no teniu cap compromís afegit"
 }
