--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -1055,5 +1055,6 @@
   "no_reliable_node_reachable": "Konnte keinen zuverlässigen Knoten erreichen. Bitte überprüfen Sie, ob Sie eine Internetverbindung haben.",
   "node_successfully_connected": "Erfolgreich mit dem Knoten verbunden",
   "selected_node": "Derzeit ausgewählter Knoten",
-  "toggle_nodeselection_mode": "Schalten Sie um, um zwischen manueller oder automatischer Knotenauswahl zu wechseln"
+  "toggle_nodeselection_mode": "Schalten Sie um, um zwischen manueller oder automatischer Knotenauswahl zu wechseln",
+  "commitment_zero_balance": "Sie haben noch keinen Einsatz hinzugefügt"
 }
