--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -1055,5 +1055,6 @@
   "no_reliable_node_reachable": "Non se puido alcanzar ningún nodo fiable. Verifique se ten conexión a Internet.",
   "node_successfully_connected": "Conectouse correctamente ao nodo",
   "selected_node": "Nodo seleccionado actualmente",
-  "toggle_nodeselection_mode": "Alternar para cambiar entre a selección de nodos manual ou automática"
+  "toggle_nodeselection_mode": "Alternar para cambiar entre a selección de nodos manual ou automática",
+  "commitment_zero_balance": "Aínda non engadiches ningún compromiso"
 }
