--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -1055,5 +1055,6 @@
   "no_reliable_node_reachable": "Impossibile raggiungere alcun nodo affidabile. Si prega di verificare se si dispone di una connessione Internet.",
   "node_successfully_connected": "Connesso con successo al nodo",
   "selected_node": "Nodo attualmente selezionato",
-  "toggle_nodeselection_mode": "Toggle per passare dalla selezione del nodo manuale o automatica"
+  "toggle_nodeselection_mode": "Toggle per passare dalla selezione del nodo manuale o automatica",
+  "commitment_zero_balance": "Non hai ancora alcun impegno aggiunto"
 }
