--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -1055,5 +1055,6 @@
   "no_reliable_node_reachable": "信頼できるノードに到達できませんでした。インターネットに接続しているかどうかを確認してください。",
   "node_successfully_connected": "ノードに正常に接続されました",
   "selected_node": "現在選択されているノード",
-  "toggle_nodeselection_mode": "手動または自動のノード選択を切り替えるために切り替えます"
+  "toggle_nodeselection_mode": "手動または自動のノード選択を切り替えるために切り替えます",
+  "commitment_zero_balance": "コミットメントはまだ追加されていません"
 }
