--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -1055,5 +1055,6 @@
   "no_reliable_node_reachable": "无法到达任何可靠的节点。请确认您是否有互联网连接。",
   "node_successfully_connected": "成功连接到节点",
   "selected_node": "当前选择的节点",
-  "toggle_nodeselection_mode": "切换以在手动或自动节点选择之间切换"
+  "toggle_nodeselection_mode": "切换以在手动或自动节点选择之间切换",
+  "commitment_zero_balance": "您尚未添加任何承诺"
 }
