--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -1056,5 +1056,6 @@
   "node_successfully_connected": "Conectat cu succes la nod",
   "selected_node": "Nodul selectat în prezent",
   "toggle_nodeselection_mode": "Comutați pentru a comuta între selecția manuală sau automată a nodului",
-  "commitment_zero_balance": "Nu ați adăugat încă niciun angajament"
+  "commitment_zero_balance": "Nu ați adăugat încă niciun angajament",
+  "network": "Reţea"
 }
