--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -1056,5 +1056,6 @@
   "node_successfully_connected": "Conectouse correctamente ao nodo",
   "selected_node": "Nodo seleccionado actualmente",
   "toggle_nodeselection_mode": "Alternar para cambiar entre a selección de nodos manual ou automática",
-  "commitment_zero_balance": "Aínda non engadiches ningún compromiso"
+  "commitment_zero_balance": "Aínda non engadiches ningún compromiso",
+  "network": "Rede"
 }
