--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -1056,5 +1056,6 @@
   "node_successfully_connected": "ノードに正常に接続されました",
   "selected_node": "現在選択されているノード",
   "toggle_nodeselection_mode": "手動または自動のノード選択を切り替えるために切り替えます",
-  "commitment_zero_balance": "コミットメントはまだ追加されていません"
+  "commitment_zero_balance": "コミットメントはまだ追加されていません",
+  "network": "通信網"
 }
