--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -1056,5 +1056,6 @@
   "node_successfully_connected": "Sėkmingai prisijungta prie mazgo",
   "selected_node": "Šiuo metu pasirinktas mazgas",
   "toggle_nodeselection_mode": "Perjunkite, jei norite perjungti rankinį ar automatinį mazgų pasirinkimą",
-  "commitment_zero_balance": "Dar neturite jokių įsipareigojimų"
+  "commitment_zero_balance": "Dar neturite jokių įsipareigojimų",
+  "network": "Tinklas"
 }
