Fix Revoke Commitment (#1444)
* feat: fixes #1443 and removed toggle

* fix: added translations - fixes #1442

* feat: added wrong pin execpetion

--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -1055,5 +1055,7 @@
   "no_reliable_node_reachable": "किसी भी विश्वसनीय नोड तक नहीं पहुंच सका। यदि आपके पास इंटरनेट कनेक्शन है, तो कृपया सत्यापित करें।",
   "node_successfully_connected": "सफलतापूर्वक नोड से जुड़ा है",
   "selected_node": "वर्तमान में चयनित नोड",
-  "toggle_nodeselection_mode": "मैन्युअल या स्वचालित नोड चयन के बीच स्विच करने के लिए टॉगल करें"
+  "toggle_nodeselection_mode": "मैन्युअल या स्वचालित नोड चयन के बीच स्विच करने के लिए टॉगल करें",
+  "commitment_zero_balance": "आपकी अभी तक कोई प्रतिबद्धता नहीं है",
+  "network": "नेटवर्क"
 }
