--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -1055,5 +1055,7 @@
   "no_reliable_node_reachable": "Kan geen betrouwbaar knooppunt bereiken. Controleer alsjeblieft of je een internetverbinding hebt.",
   "node_successfully_connected": "Succesvol verbonden met het knooppunt",
   "selected_node": "Momenteel geselecteerde knoop",
-  "toggle_nodeselection_mode": "Wisselen om te schakelen tussen handmatige of automatische knooppuntselectie"
+  "toggle_nodeselection_mode": "Wisselen om te schakelen tussen handmatige of automatische knooppuntselectie",
+  "commitment_zero_balance": "U heeft nog geen toezegging toegevoegd",
+  "network": "Netwerk"
 }
