--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -1055,5 +1055,7 @@
   "no_reliable_node_reachable": "Nelze dosáhnout žádného spolehlivého uzlu. Ověřte, zda máte připojení k internetu.",
   "node_successfully_connected": "Úspěšně připojeno k uzlu",
   "selected_node": "Aktuálně vybraný uzel",
-  "toggle_nodeselection_mode": "Přepnutím přepínáte mezi ručním nebo automatickým výběrem uzlu"
+  "toggle_nodeselection_mode": "Přepnutím přepínáte mezi ručním nebo automatickým výběrem uzlu",
+  "commitment_zero_balance": "Zatím nemáte přidán žádný závazek",
+  "network": "Síť"
 }
