--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -1039,7 +1039,7 @@
   "add_commitment": "Einsatz hinzufügen",
   "revoke_commitment": "Einsatz widerrufen",
   "reward_recipient_assignment": "Belohnungsempfängerzuweisung",
-  "mining": "Bergbau",
+  "mining": "Mining",
   "applied_commitment": "Angewandter Einsatz",
   "toggle_commitment_mode": "Wechseln Sie hier zwischen dem Hinzufügen und Widerrufen des Mining-Einsatzes",
   "success_set_commitment": "Ihr Mining-Einsatz wurde erfolgreich aktualisiert",
@@ -1055,5 +1055,7 @@
   "no_reliable_node_reachable": "Konnte keinen zuverlässigen Knoten erreichen. Bitte überprüfen Sie, ob Sie eine Internetverbindung haben.",
   "node_successfully_connected": "Erfolgreich mit dem Knoten verbunden",
   "selected_node": "Derzeit ausgewählter Knoten",
-  "toggle_nodeselection_mode": "Schalten Sie um, um zwischen manueller oder automatischer Knotenauswahl zu wechseln"
+  "toggle_nodeselection_mode": "Schalten Sie um, um zwischen manueller oder automatischer Knotenauswahl zu wechseln",
+  "commitment_zero_balance": "Sie haben noch keinen Einsatz hinzugefügt",
+  "network": "Netzwerk"
 }
