--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -1055,5 +1055,7 @@
   "no_reliable_node_reachable": "No se pudo alcanzar ningún nodo confiable. Por favor, verifique si tiene conexión a Internet.",
   "node_successfully_connected": "Conectado con éxito al nodo",
   "selected_node": "Nodo seleccionado actualmente",
-  "toggle_nodeselection_mode": "Alternar para cambiar entre selección de nodo manual o automática"
+  "toggle_nodeselection_mode": "Alternar para cambiar entre selección de nodo manual o automática",
+  "commitment_zero_balance": "Aún no has añadido ningún compromiso",
+  "network": "La red"
 }
