--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -1055,5 +1055,7 @@
   "no_reliable_node_reachable": "Ei voitu saavuttaa luotettavaa solmua. Tarkista, onko sinulla Internet-yhteys.",
   "node_successfully_connected": "Yhdistäminen solmuun onnistui",
   "selected_node": "Tällä hetkellä valittu solmu",
-  "toggle_nodeselection_mode": "Vaihda vaihtaaksesi manuaalisen tai automaattisen solmuvalinnan välillä"
+  "toggle_nodeselection_mode": "Vaihda vaihtaaksesi manuaalisen tai automaattisen solmuvalinnan välillä",
+  "commitment_zero_balance": "Sinulle ei ole vielä lisätty sitoumusta",
+  "network": "Verkko"
 }
