--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -1055,5 +1055,7 @@
   "no_reliable_node_reachable": "Impossible d'atteindre un nœud fiable. Veuillez vérifier si vous disposez d'une connexion Internet.",
   "node_successfully_connected": "Connexion réussie au nœud",
   "selected_node": "Noeud actuellement sélectionné",
-  "toggle_nodeselection_mode": "Basculer pour basculer entre la sélection manuelle ou automatique des nœuds"
+  "toggle_nodeselection_mode": "Basculer pour basculer entre la sélection manuelle ou automatique des nœuds",
+  "commitment_zero_balance": "Vous n'avez pas encore d'engagement ajouté",
+  "network": "Réseau"
 }
