--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -1055,5 +1055,7 @@
   "no_reliable_node_reachable": "Nepavyko pasiekti jokio patikimo mazgo. Patikrinkite, ar turite interneto ryšį.",
   "node_successfully_connected": "Sėkmingai prisijungta prie mazgo",
   "selected_node": "Šiuo metu pasirinktas mazgas",
-  "toggle_nodeselection_mode": "Perjunkite, jei norite perjungti rankinį ar automatinį mazgų pasirinkimą"
+  "toggle_nodeselection_mode": "Perjunkite, jei norite perjungti rankinį ar automatinį mazgų pasirinkimą",
+  "commitment_zero_balance": "Dar neturite jokių įsipareigojimų",
+  "network": "Tinklas"
 }
