--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -1055,5 +1055,7 @@
   "no_reliable_node_reachable": "Não foi possível alcançar nenhum nó confiável. Por favor, verifique se você tem uma conexão com a internet.",
   "node_successfully_connected": "Conectado com sucesso ao nó",
   "selected_node": "Nó selecionado atualmente",
-  "toggle_nodeselection_mode": "Alterne para alternar entre seleção de nó manual ou automática"
+  "toggle_nodeselection_mode": "Alterne para alternar entre seleção de nó manual ou automática",
+  "commitment_zero_balance": "Você ainda não adicionou nenhum compromisso",
+  "network": "Rede"
 }
