--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -1055,5 +1055,7 @@
   "no_reliable_node_reachable": "Nepodarilo sa dosiahnuť žiadny spoľahlivý uzol. Skontrolujte, či máte internetové pripojenie.",
   "node_successfully_connected": "Úspešne pripojené k uzlu",
   "selected_node": "Aktuálne vybraný uzol",
-  "toggle_nodeselection_mode": "Prepínaním prepínate medzi manuálnym alebo automatickým výberom uzla"
+  "toggle_nodeselection_mode": "Prepínaním prepínate medzi manuálnym alebo automatickým výberom uzla",
+  "commitment_zero_balance": "Zatiaľ nemáte pridaný žiadny záväzok",
+  "network": "Sieť"
 }
