--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -1055,5 +1055,7 @@
   "no_reliable_node_reachable": "Herhangi bir güvenilir düğüme ulaşılamadı. Lütfen internet bağlantınız olup olmadığını kontrol edin.",
   "node_successfully_connected": "Düğüme başarıyla bağlandı",
   "selected_node": "Şu anda seçili düğüm",
-  "toggle_nodeselection_mode": "Manuel veya otomatik düğüm seçimi arasında geçiş yapmak için geçiş yapın"
+  "toggle_nodeselection_mode": "Manuel veya otomatik düğüm seçimi arasında geçiş yapmak için geçiş yapın",
+  "commitment_zero_balance": "Henüz taahhüt eklemediniz",
+  "network": "Ağ"
 }
